添加 env 检测功能

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# 支持的类型 string, number, null, boolean, array
+# null 支持 null,NULL,(null)
+# 如果需要转换更多类型，请修改 src/env/preload.js
+
 # devlopment or production or test
 NODE_ENV=development
 
