--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@stringke/prisma-generator-tsrpc": "^1.0.7",
     "@types/content-type": "^1.1.5",
+    "@types/fs-extra": "^9.0.13",
     "@types/lodash": "^4.14.189",
     "@types/mocha": "^8.2.3",
     "@types/node": "^16.18.0",
@@ -49,6 +50,7 @@
     "content-type": "^1.0.4",
     "dayjs": "^1.11.6",
     "dotenv": "^16.0.3",
+    "fs-extra": "^10.1.0",
     "hash-wasm": "^4.9.0",
     "ioredis": "^5.2.4",
     "lodash": "^4.17.21",
