完善 COS OSS 存储封装

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@stringke/prisma-generator-tsrpc": "^1.0.7",
+    "@types/ali-oss": "^6.16.6",
     "@types/content-type": "^1.1.5",
     "@types/fs-extra": "^9.0.13",
     "@types/lodash": "^4.14.189",
@@ -44,10 +45,12 @@
     "@tnwx/kits": "^2.5.6",
     "@tnwx/miniprogram": "^2.5.6",
     "@tnwx/wxmp": "^2.5.6",
+    "ali-oss": "^6.17.1",
     "bullmq": "^3.2.2",
     "casbin": "^5.19.2",
     "casbin-redis-adapter": "^1.0.3",
     "content-type": "^1.0.4",
+    "cos-nodejs-sdk-v5": "^2.11.15",
     "dayjs": "^1.11.6",
     "dotenv": "^16.0.3",
     "fs-extra": "^10.1.0",
