云存储驱动添加关于 STS 授权的封装，适用于小程序上传文件

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "lodash": "^4.17.21",
     "parse-multipart-data": "^1.5.0",
     "putil-promisify": "^1.8.5",
+    "qcloud-cos-sts": "^3.1.0",
     "qs": "^6.11.0",
     "tsrpc": "^3.4.10",
     "zod": "^3.19.1"
