添加社会化登陆支持

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # devlopment or production or test
 NODE_ENV=development
 
+APP_URL="https://ap1.nat.xxika.com"
 DATABASE_URL="postgresql://root:123456@localhost:5432/36pic?schema=public"
 
 # 微信相关配置
