--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "dayjs": "^1.11.6",
     "dotenv": "^16.0.3",
     "fs-extra": "^10.1.0",
+    "got": "^12.5.3",
     "hash-wasm": "^4.9.0",
     "ioredis": "^5.2.4",
     "lodash": "^4.17.21",
