社会化登陆封装

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
       "ESNext"
     ],
     "module": "commonjs",
-    "target": "es2018",
+    "target": "ESNext",
     "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
