--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "postinstall": "prisma generate"
   },
   "devDependencies": {
-    "@stringke/prisma-generator-tsrpc": "^1.0.7",
+    "@stringke/prisma-generator-tsrpc": "^1.0.10",
     "@types/ali-oss": "^6.16.6",
     "@types/content-type": "^1.1.5",
     "@types/fs-extra": "^9.0.13",
@@ -46,6 +46,7 @@
     "@tnwx/miniprogram": "^2.5.6",
     "@tnwx/wxmp": "^2.5.6",
     "ali-oss": "^6.17.1",
+    "axios": "^1.1.3",
     "bullmq": "^3.2.2",
     "casbin": "^5.19.2",
     "casbin-redis-adapter": "^1.0.3",
@@ -54,7 +55,6 @@
     "dayjs": "^1.11.6",
     "dotenv": "^16.0.3",
     "fs-extra": "^10.1.0",
-    "got": "^12.5.3",
     "hash-wasm": "^4.9.0",
     "ioredis": "^5.2.4",
     "lodash": "^4.17.21",
