修复驱动加载问题

--- a/.env
+++ b/.env
@@ -10,3 +10,9 @@ WECHAT_MP_TEST_APP_SECRET="f3a506f1c3e8118c3266796f0417f20e"
 WECHAT_MP_TEST_TOKEN="qKuPocLoJOvOpMrVTEJHhQpz"
 WECHAT_MP_TEST_ENCRYPT_MESSAGE=false
 WECHAT_MP_TEST_ENCODING_AES_KEY=null
+
+# COS 存储
+STORAGE_COS_DEFAULT_SECRET_ID=""
+STORAGE_COS_DEFAULT_SECRET_KEY=""
+STORAGE_COS_DEFAULT_REGION="ap-guangzhou"
+STORAGE_COS_DEFAULT_BUCKET="36pic-1250000000"
